# pio

./: .gitignore  Cargo.toml  examples.yaml  justfile  melilla-latest.osm.pbf  pio  poi.yaml
examples/: docker-compose.yaml
resources/: poi.yaml
src/: main.rs
src/fs/: mod.rs
src/io/: mod.rs
src/osmpbf/: mod.rs  process.rs
src/pg/: async_job.rs  mod.rs  pool.rs
src/process/: bin_geom.rs  elements.rs  example1.rs  example2.rs  example3.rs  mod.rs  nodes.rs  properties.rs
src/schema/: mod.rs  omt.rs
src/utils/: cli.rs  config.rs  database.rs  geo.rs  io.rs  mod.rs  validate.rs
