[package]
name = "pio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.3.3"
derive_more = {version = "1.0.0-beta", features = ["from"]}
geo = "0.28.0"
geojson = "0.24.1"
serde_yaml = "0.9.34"
serde = "1.0.203"
wkt = "0.10.3"
postgres-protocol = "0.6.6"
postgres = "0.19.7"
clap = { version = "4.5.7", features = ["derive"] }
tokio-postgres = "0.7.10"
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"
deadpool-postgres = "0.14.0"
bytes = "1.6.0"
futures = "0.3.30"
postgis = "0.9.0"
wkb = "0.7.1"
geo-types = "0.7.13"
